--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.androidtest.sirievents">
+    package="com.android.sirievents">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.SiriEvents"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup">
-        <activity android:name=".SplashActivity">
+        <activity android:name="com.android.sirievents.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name="com.android.sirievents.MainActivity"/>
     </application>
 
 </manifest>
